force-app/main/default/objects/Ranking__c/Ranking__c.object-meta.xml
<CustomObject>
    <label>Ranking</label>
    <nameField>
        <label>Boss Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rankings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>