force-app/main/default/objects/Ranking__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Rankings</relationshipLabel>
    <relationshipName>Rankings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>