force-app/main/default/objects/Ranking__c/fields/Percentile__c.field-meta.xml
<CustomField>
    <fullName>Percentile__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Percentile</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>