force-app/main/default/objects/Ranking__c/fields/Raid_Name__c.field-meta.xml
<CustomField>
    <fullName>Raid_Name__c</fullName>
    <label>Raid Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Naxxramas</fullName>
                <default>true</default>
                <label>Naxxramas</label>
            </value>
            <value>
                <fullName>Ahn&apos;Qiraj</fullName>
            </value>
            <value>
                <fullName>Blackwing Lair</fullName>
            </value>
            <value>
                <fullName>Molten Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>