force-app/main/default/objects/Ranking__c/fields/Rank_Total__c.field-meta.xml
<CustomField>
    <fullName>Rank_Total__c</fullName>
    <label>Rank Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>