force-app/main/default/objects/Ranking__c/fields/RankingId__c.field-meta.xml
<CustomField>
    <fullName>RankingId__c</fullName>
    <externalId>true</externalId>
    <label>RankingId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>