force-app/main/default/objects/Ranking__c/fields/Spec__c.field-meta.xml
<CustomField>
    <fullName>Spec__c</fullName>
    <defaultValue>&apos;DPS&apos;</defaultValue>
    <label>Spec</label>
    <length>20</length>
    <type>Text</type>
</CustomField>